Primer Semestre/Procesadores de Lenguaje/Practica 3/PracticaFinal12/CopiaLexer_Parser_Ejecucion_Listener/.antlr/gramFibParser.java
// Generated from d:\Universidad\Procesadores del Lenguaje\ANTLR\practica2_2\CopiaLexer_Parser_Ejecucion_Listener\gramFibParser.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class gramFibParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		B_WHILE=1, FUNCION=2, INCLUD=3, DEVOLVER=4, BEGIN=5, END=6, CADENA=7, 
		TYPE=8, OPERACION=9, INT=10, FLOTANTE=11, VARIABLE=12, PI=13, PD=14, ASIG=15, 
		PUNTOS=16, COMA=17, END_LINEDECL=18, COMENTARIO_BLOQUE=19, COMENTARIO_BLOQUE2=20, 
		COMENTARIO_LINEA=21, COMENTARIO_LINEA2=22, COMENTARIO_LINEA3=23, WS=24, 
		NEWLINE=25;
	public static final int
		RULE_prog = 0, RULE_includ = 1, RULE_functions = 2, RULE_beg_end = 3, 
		RULE_b_while = 4, RULE_declaracion = 5, RULE_return_fun = 6, RULE_llamar_funcion = 7, 
		RULE_expr = 8, RULE_p_reservadas = 9, RULE_p_reservadaWhile = 10, RULE_p_reservadafuncion = 11, 
		RULE_begin = 12, RULE_end = 13, RULE_cadenachar = 14, RULE_integer = 15, 
		RULE_type = 16, RULE_n_libreria = 17, RULE_variable = 18, RULE_n_funcion = 19, 
		RULE_operaciones = 20, RULE_asignacion = 21, RULE_coma = 22, RULE_d_puntos = 23, 
		RULE_end_line = 24, RULE_parentesis = 25, RULE_ws = 26, RULE_newline = 27, 
		RULE_puntos = 28, RULE_coments = 29;
	public static final String[] ruleNames = {
		"prog", "includ", "functions", "beg_end", "b_while", "declaracion", "return_fun", 
		"llamar_funcion", "expr", "p_reservadas", "p_reservadaWhile", "p_reservadafuncion", 
		"begin", "end", "cadenachar", "integer", "type", "n_libreria", "variable", 
		"n_funcion", "operaciones", "asignacion", "coma", "d_puntos", "end_line", 
		"parentesis", "ws", "newline", "puntos", "coments"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'while'", "'function'", "'include'", "'devolver'", "'begin'", "'end'", 
		null, null, null, null, null, null, "'('", "')'", "':='", "':'", "','", 
		"';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "B_WHILE", "FUNCION", "INCLUD", "DEVOLVER", "BEGIN", "END", "CADENA", 
		"TYPE", "OPERACION", "INT", "FLOTANTE", "VARIABLE", "PI", "PD", "ASIG", 
		"PUNTOS", "COMA", "END_LINEDECL", "COMENTARIO_BLOQUE", "COMENTARIO_BLOQUE2", 
		"COMENTARIO_LINEA", "COMENTARIO_LINEA2", "COMENTARIO_LINEA3", "WS", "NEWLINE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gramFibParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public gramFibParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(gramFibParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(gramFibParser.NEWLINE, i);
		}
		public List<IncludContext> includ() {
			return getRuleContexts(IncludContext.class);
		}
		public IncludContext includ(int i) {
			return getRuleContext(IncludContext.class,i);
		}
		public List<FunctionsContext> functions() {
			return getRuleContexts(FunctionsContext.class);
		}
		public FunctionsContext functions(int i) {
			return getRuleContext(FunctionsContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FUNCION) | (1L << INCLUD) | (1L << DEVOLVER) | (1L << VARIABLE) | (1L << NEWLINE))) != 0)) {
				{
				setState(65);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case FUNCION:
				case INCLUD:
				case DEVOLVER:
				case VARIABLE:
					{
					setState(62);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case INCLUD:
					case DEVOLVER:
						{
						setState(60);
						includ();
						}
						break;
					case FUNCION:
					case VARIABLE:
						{
						setState(61);
						functions();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				case NEWLINE:
					{
					setState(64);
					match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncludContext extends ParserRuleContext {
		public P_reservadasContext p_reservadas() {
			return getRuleContext(P_reservadasContext.class,0);
		}
		public End_lineContext end_line() {
			return getRuleContext(End_lineContext.class,0);
		}
		public List<N_libreriaContext> n_libreria() {
			return getRuleContexts(N_libreriaContext.class);
		}
		public N_libreriaContext n_libreria(int i) {
			return getRuleContext(N_libreriaContext.class,i);
		}
		public List<IntegerContext> integer() {
			return getRuleContexts(IntegerContext.class);
		}
		public IntegerContext integer(int i) {
			return getRuleContext(IntegerContext.class,i);
		}
		public IncludContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_includ; }
	}

	public final IncludContext includ() throws RecognitionException {
		IncludContext _localctx = new IncludContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_includ);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			p_reservadas();
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INT || _la==VARIABLE) {
				{
				setState(73);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case VARIABLE:
					{
					setState(71);
					n_libreria();
					}
					break;
				case INT:
					{
					setState(72);
					integer();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(78);
			end_line();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionsContext extends ParserRuleContext {
		public List<ParentesisContext> parentesis() {
			return getRuleContexts(ParentesisContext.class);
		}
		public ParentesisContext parentesis(int i) {
			return getRuleContext(ParentesisContext.class,i);
		}
		public D_puntosContext d_puntos() {
			return getRuleContext(D_puntosContext.class,0);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public List<N_funcionContext> n_funcion() {
			return getRuleContexts(N_funcionContext.class);
		}
		public N_funcionContext n_funcion(int i) {
			return getRuleContext(N_funcionContext.class,i);
		}
		public List<IntegerContext> integer() {
			return getRuleContexts(IntegerContext.class);
		}
		public IntegerContext integer(int i) {
			return getRuleContext(IntegerContext.class,i);
		}
		public Beg_endContext beg_end() {
			return getRuleContext(Beg_endContext.class,0);
		}
		public P_reservadafuncionContext p_reservadafuncion() {
			return getRuleContext(P_reservadafuncionContext.class,0);
		}
		public List<ComaContext> coma() {
			return getRuleContexts(ComaContext.class);
		}
		public ComaContext coma(int i) {
			return getRuleContext(ComaContext.class,i);
		}
		public FunctionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functions; }
	}

	public final FunctionsContext functions() throws RecognitionException {
		FunctionsContext _localctx = new FunctionsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_functions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUNCION:
				{
				{
				setState(80);
				p_reservadafuncion();
				}
				}
				break;
			case VARIABLE:
				{
				setState(81);
				variable();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INT || _la==VARIABLE) {
				{
				setState(86);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case VARIABLE:
					{
					setState(84);
					n_funcion();
					}
					break;
				case INT:
					{
					setState(85);
					integer();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(91);
			parentesis();
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TYPE) {
				{
				{
				setState(92);
				type();
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==INT || _la==VARIABLE) {
					{
					setState(95);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case VARIABLE:
						{
						setState(93);
						variable();
						}
						break;
					case INT:
						{
						setState(94);
						integer();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMA) {
					{
					setState(100);
					coma();
					}
				}

				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(108);
			parentesis();
			setState(109);
			d_puntos();
			setState(110);
			type();
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==BEGIN) {
				{
				setState(111);
				beg_end();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Beg_endContext extends ParserRuleContext {
		public BeginContext begin() {
			return getRuleContext(BeginContext.class,0);
		}
		public EndContext end() {
			return getRuleContext(EndContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<B_whileContext> b_while() {
			return getRuleContexts(B_whileContext.class);
		}
		public B_whileContext b_while(int i) {
			return getRuleContext(B_whileContext.class,i);
		}
		public List<Return_funContext> return_fun() {
			return getRuleContexts(Return_funContext.class);
		}
		public Return_funContext return_fun(int i) {
			return getRuleContext(Return_funContext.class,i);
		}
		public List<DeclaracionContext> declaracion() {
			return getRuleContexts(DeclaracionContext.class);
		}
		public DeclaracionContext declaracion(int i) {
			return getRuleContext(DeclaracionContext.class,i);
		}
		public List<CadenacharContext> cadenachar() {
			return getRuleContexts(CadenacharContext.class);
		}
		public CadenacharContext cadenachar(int i) {
			return getRuleContext(CadenacharContext.class,i);
		}
		public List<Beg_endContext> beg_end() {
			return getRuleContexts(Beg_endContext.class);
		}
		public Beg_endContext beg_end(int i) {
			return getRuleContext(Beg_endContext.class,i);
		}
		public Beg_endContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_beg_end; }
	}

	public final Beg_endContext beg_end() throws RecognitionException {
		Beg_endContext _localctx = new Beg_endContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_beg_end);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			begin();
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << B_WHILE) | (1L << INCLUD) | (1L << DEVOLVER) | (1L << BEGIN) | (1L << CADENA) | (1L << TYPE) | (1L << INT) | (1L << VARIABLE) | (1L << PI) | (1L << PD) | (1L << ASIG))) != 0)) {
				{
				setState(121);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
				case 1:
					{
					setState(115);
					expr(0);
					}
					break;
				case 2:
					{
					setState(116);
					b_while();
					}
					break;
				case 3:
					{
					setState(117);
					return_fun();
					}
					break;
				case 4:
					{
					setState(118);
					declaracion();
					}
					break;
				case 5:
					{
					setState(119);
					cadenachar();
					}
					break;
				case 6:
					{
					setState(120);
					beg_end();
					}
					break;
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(126);
			end();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class B_whileContext extends ParserRuleContext {
		public P_reservadaWhileContext p_reservadaWhile() {
			return getRuleContext(P_reservadaWhileContext.class,0);
		}
		public List<ParentesisContext> parentesis() {
			return getRuleContexts(ParentesisContext.class);
		}
		public ParentesisContext parentesis(int i) {
			return getRuleContext(ParentesisContext.class,i);
		}
		public OperacionesContext operaciones() {
			return getRuleContext(OperacionesContext.class,0);
		}
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public List<IntegerContext> integer() {
			return getRuleContexts(IntegerContext.class);
		}
		public IntegerContext integer(int i) {
			return getRuleContext(IntegerContext.class,i);
		}
		public Beg_endContext beg_end() {
			return getRuleContext(Beg_endContext.class,0);
		}
		public B_whileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_b_while; }
	}

	public final B_whileContext b_while() throws RecognitionException {
		B_whileContext _localctx = new B_whileContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_b_while);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			p_reservadaWhile();
			setState(129);
			parentesis();
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INT || _la==VARIABLE) {
				{
				setState(132);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case VARIABLE:
					{
					setState(130);
					variable();
					}
					break;
				case INT:
					{
					setState(131);
					integer();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(137);
			operaciones();
			setState(138);
			variable();
			setState(139);
			parentesis();
			setState(141);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				{
				setState(140);
				beg_end();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionContext extends ParserRuleContext {
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public List<IntegerContext> integer() {
			return getRuleContexts(IntegerContext.class);
		}
		public IntegerContext integer(int i) {
			return getRuleContext(IntegerContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<End_lineContext> end_line() {
			return getRuleContexts(End_lineContext.class);
		}
		public End_lineContext end_line(int i) {
			return getRuleContext(End_lineContext.class,i);
		}
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaracion);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TYPE) {
				{
				setState(143);
				type();
				}
			}

			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INT || _la==VARIABLE) {
				{
				setState(148);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case VARIABLE:
					{
					setState(146);
					variable();
					}
					break;
				case INT:
					{
					setState(147);
					integer();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(153);
			asignacion();
			setState(157);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,21,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(154);
					expr(0);
					}
					} 
				}
				setState(159);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,21,_ctx);
			}
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==END_LINEDECL) {
				{
				{
				setState(160);
				end_line();
				}
				}
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Return_funContext extends ParserRuleContext {
		public P_reservadasContext p_reservadas() {
			return getRuleContext(P_reservadasContext.class,0);
		}
		public List<ParentesisContext> parentesis() {
			return getRuleContexts(ParentesisContext.class);
		}
		public ParentesisContext parentesis(int i) {
			return getRuleContext(ParentesisContext.class,i);
		}
		public End_lineContext end_line() {
			return getRuleContext(End_lineContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public Return_funContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_return_fun; }
	}

	public final Return_funContext return_fun() throws RecognitionException {
		Return_funContext _localctx = new Return_funContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_return_fun);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			p_reservadas();
			setState(167);
			parentesis();
			setState(171);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,23,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(168);
					expr(0);
					}
					} 
				}
				setState(173);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,23,_ctx);
			}
			setState(174);
			parentesis();
			setState(175);
			end_line();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Llamar_funcionContext extends ParserRuleContext {
		public List<ParentesisContext> parentesis() {
			return getRuleContexts(ParentesisContext.class);
		}
		public ParentesisContext parentesis(int i) {
			return getRuleContext(ParentesisContext.class,i);
		}
		public List<N_funcionContext> n_funcion() {
			return getRuleContexts(N_funcionContext.class);
		}
		public N_funcionContext n_funcion(int i) {
			return getRuleContext(N_funcionContext.class,i);
		}
		public List<IntegerContext> integer() {
			return getRuleContexts(IntegerContext.class);
		}
		public IntegerContext integer(int i) {
			return getRuleContext(IntegerContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<ComaContext> coma() {
			return getRuleContexts(ComaContext.class);
		}
		public ComaContext coma(int i) {
			return getRuleContext(ComaContext.class,i);
		}
		public End_lineContext end_line() {
			return getRuleContext(End_lineContext.class,0);
		}
		public Llamar_funcionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_llamar_funcion; }
	}

	public final Llamar_funcionContext llamar_funcion() throws RecognitionException {
		Llamar_funcionContext _localctx = new Llamar_funcionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_llamar_funcion);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INT || _la==VARIABLE) {
				{
				setState(179);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case VARIABLE:
					{
					setState(177);
					n_funcion();
					}
					break;
				case INT:
					{
					setState(178);
					integer();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(184);
			parentesis();
			setState(189);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,27,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(187);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case CADENA:
					case INT:
					case VARIABLE:
					case PI:
					case PD:
						{
						setState(185);
						expr(0);
						}
						break;
					case COMA:
						{
						setState(186);
						coma();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(191);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,27,_ctx);
			}
			setState(192);
			parentesis();
			setState(194);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,28,_ctx) ) {
			case 1:
				{
				setState(193);
				end_line();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public CadenacharContext cadenachar() {
			return getRuleContext(CadenacharContext.class,0);
		}
		public IntegerContext integer() {
			return getRuleContext(IntegerContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public Llamar_funcionContext llamar_funcion() {
			return getRuleContext(Llamar_funcionContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public OperacionesContext operaciones() {
			return getRuleContext(OperacionesContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 16;
		enterRecursionRule(_localctx, 16, RULE_expr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(201);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,29,_ctx) ) {
			case 1:
				{
				setState(197);
				cadenachar();
				}
				break;
			case 2:
				{
				setState(198);
				integer();
				}
				break;
			case 3:
				{
				setState(199);
				variable();
				}
				break;
			case 4:
				{
				setState(200);
				llamar_funcion();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(209);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,30,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ExprContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_expr);
					setState(203);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(204);
					operaciones();
					setState(205);
					expr(2);
					}
					} 
				}
				setState(211);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,30,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class P_reservadasContext extends ParserRuleContext {
		public TerminalNode INCLUD() { return getToken(gramFibParser.INCLUD, 0); }
		public TerminalNode DEVOLVER() { return getToken(gramFibParser.DEVOLVER, 0); }
		public P_reservadasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_p_reservadas; }
	}

	public final P_reservadasContext p_reservadas() throws RecognitionException {
		P_reservadasContext _localctx = new P_reservadasContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_p_reservadas);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(212);
			_la = _input.LA(1);
			if ( !(_la==INCLUD || _la==DEVOLVER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class P_reservadaWhileContext extends ParserRuleContext {
		public TerminalNode B_WHILE() { return getToken(gramFibParser.B_WHILE, 0); }
		public P_reservadaWhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_p_reservadaWhile; }
	}

	public final P_reservadaWhileContext p_reservadaWhile() throws RecognitionException {
		P_reservadaWhileContext _localctx = new P_reservadaWhileContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_p_reservadaWhile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(214);
			match(B_WHILE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class P_reservadafuncionContext extends ParserRuleContext {
		public TerminalNode FUNCION() { return getToken(gramFibParser.FUNCION, 0); }
		public P_reservadafuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_p_reservadafuncion; }
	}
